[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schedy-seraph"
version = "0.1.0"
description = "Supply chain security scanner for Python projects"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "schedylabs" }]

[project.urls]
Homepage = "https://github.com/schedylabs/seraph"
Repository = "https://github.com/schedylabs/seraph"
Issues = "https://github.com/schedylabs/seraph/issues"
keywords = ["security", "supply-chain", "scanner", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

[project.scripts]
seraph = "seraph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/seraph"]
